static/css/community.css
/* ... */
.locked {
  -webkit-filter: grayscale(100%);
  /* Safari 6.0 - 9.0 */
  filter: grayscale(100%);
}

#benefitwindow {
  position: absolute;
  z-index: 9;
  background-color: #f1f1f1;
  border: 1px solid #d3d3d3;
  text-align: center;
  width: 25%;
  height: 90vh;
}

#benefitwindowheader {
  position: relative;
  padding: 10px;
  cursor: move;
  z-index: 10;
  background-color: #2196F3;
  color: #fff;
  font-weight: bold;
  font-size: large;
}

#benefitcontent {
  margin: 10px;
  height: 90%;
  overflow-y: scroll;
}

#benefitclose {
  position: absolute;
  top: 5px;
  bottom: 5px;
  left: 5px;
}

.cheatIndicator {
  top: 0;
  padding: 10px;
  background: #ff9595;
  width: fit-content;
  position: absolute;
  border-radius: 0 .5em .5em 0;
  font-size: large;
  font-weight: bold;
  z-index: 999;
}

.mode-button {
  font-family: Arial, sans-serif;
  font-size: medium;
  font-weight: bolder;
  flex-grow: 1;
  display: inline-block;
  cursor: pointer;
  text-align: center;
  text-decoration: none;
  outline: none;
  color: #ffffff;
  background-color: rgb(85, 111, 176);
  border: none;
  border-radius: 10px;
  margin: 5px;
  padding: 10px 10px;
  vertical-align: middle;
}

.mode-button:hover {
  background-color: rgb(76, 98, 154);
}

.mode-button:active {
  background-color: rgb(53, 70, 113);
}

.mode-button:disabled {
  background-color: #999;
  cursor: not-allowed;
}

.pagination-info {
  display: inline-block;
  margin: 0 15px;
  padding: 10px 15px;
  font-weight: bold;
  vertical-align: middle;
  background-color: #BFE6FF;
  color: #000;
  border-radius: 10px;
}

.pagination-input-container {
  display: inline-flex;
  vertical-align: middle;
  margin: 0px 15px 0 -5px;
}

.pagination-input {
  width: 60px;
  height: 36px;
  text-align: center;
  margin: 0;
  border-radius: 10px 0 0 10px;
  font-size: 16px;
  border: 2px solid rgb(85, 111, 176);
  border-right: none;
}

.pagination-go-button {
  margin: 0;
  border-radius: 0 10px 10px 0;
  flex-grow: 0;
}

.no-favorites-message {
  width: 100%;
  text-align: center;
  font-size: 1.2em;
  font-weight: bold;
  padding: 40px;
  color: #fff;
}

.pressed {
  background-color: rgb(53, 70, 113) !important;
}

/* Tooltip container */
.tooltip {
  position: relative;
  display: inline-block;
  border-bottom: 1px dotted black;
  /* If you want dots under the hoverable text */
}

/* Tooltip text */
.tooltip .tooltiptext,
.trophy-holder .tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: rgb(255, 255, 255);
  color: #fff;
  outline-color: black;
  outline-width: 1px;
  outline-style: solid;
  color: black;
  text-align: center;
  padding: 5px 0;
  border-radius: 6px;
  padding: 3px;

  /* Position the tooltip text - see examples below! */
  position: absolute;
  z-index: 1;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext {
  visibility: visible;
}

.trophy-holder:hover .tooltiptext,
.trophy-holder:active .tooltiptext {
  visibility: visible;
  font-size: small;
}

.tooltip .tooltiptext {
  top: -5px;
  right: 105%;
}

.trophy-holder .tooltiptext {
  bottom: 48px;
  left: -150%;
  padding: 10px;
}

.rating-background {
  background-color: rgb(85, 111, 176);
  width: 100%;
  border-radius: 0px 0px 10px 10px;
  color: white;
  padding-top: 10px;
  position: relative;
  padding-bottom: 5px;
}

.rating-holder {
  display: flex;
  gap: 5px;
  margin: 5px;
  justify-content: center;
}

.rate-button {
  overflow: hidden;
  background-size: cover;
  outline-style: solid;
  outline-width: 3px;
  outline-color: white;
  width: 32px;
  height: 32px;
  margin: 2px;
}

.rate-button:active {
  transform: translateY(1px);
}

.rate-button.pressed {
  filter: brightness(40%);
}

.announcement {
  background-color: white;
  padding-top: 12px;
  padding-bottom: 12px;
  font-weight: bold;
  text-align: center;
  font-size: larger;
}

.announcement>a {
  color: red;
}

.announcement>span {
  color: red;
  font-weight: bolder;
}

.center {
  text-align: center;
}

#answerHoverTooltip {
  position: absolute;
  display: none;
  background-color: rgba(0, 0, 0, 0.85);
  color: #fff;
  padding: 8px;
  border-radius: 5px;
  font-size: 12px;
  z-index: 9999;
  pointer-events: none;
  max-width: 500px;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
}

